Introduction -> Java String Tokens solution